add: リクエスト時のパスと対応するハンドラーの処理を追加

--- a/web/html/advertiser/cv/point1.html
+++ b/web/html/advertiser/cv/point1.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>これはPCMの広告主面CV-POINT1です</h1>
-    <button onclick="location.href='http://172.16.238.3/advertiser/cv/point2.html'">クリック！</button>
-    <img src="http://172.16.238.1/cv?cv=1" width="1" height="1" style="display: none;">
+    <button onclick="location.href='http://advertiser.test/cv/point2.html'">クリック！</button>
+    <img src="http://ad-deliver.test/cv?cv=1" width="1" height="1" style="display: none;">
 </body>
 </html>
 
