--- a/web/html/advertiser/lp.html
+++ b/web/html/advertiser/lp.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>これはPCMの広告主面LPです</h1>
-    <button onclick="location.href='http://172.16.238.3/advertiser/cv/point1.html'">クリック！</button>
+    <button onclick="location.href='http://advertiser.test/cv/point1.html'">クリック！</button>
 </body>
 </html>
