--- a/web/html/publisher/top.html
+++ b/web/html/publisher/top.html
@@ -8,7 +8,7 @@
 <body>
     <h1>これはPCMの配信面です</h1>
     <div id="ad"></div>
-    <script type="text/javascript" src="http://172.16.238.1/deliver/ad.js"></script>
+    <script type="text/javascript" src="http://ad-deliver.test/ad.js"></script>
 </body>
 </html>
 
