--- a/web/html/advertiser/cv/point3.html
+++ b/web/html/advertiser/cv/point3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>これはPCMの広告主面CV-POINT3です</h1>
-    <img src="http://172.16.238.1/cv?cv=3" width="1" height="1" style="display: none;">
+    <img src="http://ad-deliver.test/cv?cv=3" width="1" height="1" style="display: none;">
 </body>
 </html>
 
