add: 広告主のハンドラーを追加

--- a/web/html/advertiser/cv/point3.html
+++ b/web/html/advertiser/cv/point3.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-<meta charset="UTF-8">
-<title>advertiser</title>
-</style>
+    <meta charset="UTF-8">
+    <title>advertiser</title>
+    </style>
 </head>
+
 <body>
     <h1>これはPCMの広告主面CV-POINT3です</h1>
-    <img src="http://ad-deliver.test/cv?cv=3" width="1" height="1" style="display: none;">
+    <img src="{{.AdDeliver}}/conversion?cv=3" width="1" height="1" style="display: none;">
 </body>
-</html>
 
+</html>
