--- a/web/html/advertiser/lp.html
+++ b/web/html/advertiser/lp.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-<meta charset="UTF-8">
-<title>advertiser</title>
-</style>
+    <meta charset="UTF-8">
+    <title>advertiser</title>
+    </style>
 </head>
+
 <body>
     <h1>これはPCMの広告主面LPです</h1>
-    <button onclick="location.href='http://advertiser.test/cv/point1.html'">クリック！</button>
+    <button onclick="location.href='{{.Advertiser}}/cv/point1.html'">クリック！</button>
 </body>
+
 </html>
