--- a/web/html/advertiser/cv/point2.html
+++ b/web/html/advertiser/cv/point2.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-<meta charset="UTF-8">
-<title>advertiser</title>
-</style>
+    <meta charset="UTF-8">
+    <title>advertiser</title>
+    </style>
 </head>
+
 <body>
     <h1>これはPCMの広告主面CV-POINT2です</h1>
-    <button onclick="location.href='http://advertiser.test/cv/point2.html'">クリック！</button>
-    <img src="http://ad-deliver.test/cv?cv=2&priority=10" width="1" height="1" style="display: none;">
+    <button onclick="location.href='{{.Advertiser}}/cv/point2.html'">クリック！</button>
+    <img src="{{.AdDeliver}}/conversion?cv=2&priority=10" width="1" height="1" style="display: none;">
 </body>
-</html>
 
+</html>
