--- a/web/html/publisher/top.html
+++ b/web/html/publisher/top.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-<meta charset="UTF-8">
-<title>publisher</title>
-</style>
+    <meta charset="UTF-8">
+    <title>publisher</title>
+    </style>
 </head>
+
 <body>
     <h1>これはPCMの配信面です</h1>
     <div id="ad"></div>
-    <script type="text/javascript" src="http://ad-deliver.test/ad.js"></script>
+    <script type="text/javascript" src="{{.AdDeliver}}/ad"></script>
 </body>
-</html>
 
+</html>
