add: docker-compsoeファイルに環境変数を追加

--- a/web/html/advertiser/cv/point1.html
+++ b/web/html/advertiser/cv/point1.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>これはPCMの広告主面CV-POINT1です</h1>
-    <button onclick="location.href='{{.Advertiser}}/cv/point2.html'">クリック！</button>
+    <button onclick="location.href='{{.Advertiser}}/cv/point2.html'">会員登録</button>
+    <button onclick="location.href='{{.Publisher}}/top'">メディアに戻る</button>
     <img src="{{.AdDeliver}}/conversion?cv=1" width="1" height="1" style="display: none;">
 </body>
 
