--- a/web/html/advertiser/cv/point2.html
+++ b/web/html/advertiser/cv/point2.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>これはPCMの広告主面CV-POINT2です</h1>
-    <button onclick="location.href='{{.Advertiser}}/cv/point2.html'">クリック！</button>
+    <button onclick="location.href='{{.Advertiser}}/cv/point3.html'">注文を確定する</button>
+    <button onclick="location.href='{{.Publisher}}/top'">メディアに戻る</button>
     <img src="{{.AdDeliver}}/conversion?cv=2&priority=10" width="1" height="1" style="display: none;">
 </body>
 
