--- a/web/html/advertiser/lp.html
+++ b/web/html/advertiser/lp.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>これはPCMの広告主面LPです</h1>
-    <button onclick="location.href='{{.Advertiser}}/cv/point1.html'">クリック！</button>
+    <button onclick="location.href='{{.Advertiser}}/cv/point1.html'">商品の購入</button>
+    <button onclick="location.href='{{.Publisher}}/top'">メディアに戻る</button>
 </body>
 
 </html>
