--- a/web/html/advertiser/cv/point3.html
+++ b/web/html/advertiser/cv/point3.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>これはPCMの広告主面CV-POINT3です</h1>
-    <img src="{{.AdDeliver}}/conversion?cv=3" width="1" height="1" style="display: none;">
+    <button onclick="location.href='{{.Publisher}}/top'">メディアに戻る</button>
+    <img src="{{.AdDeliver}}/conversion?cv=3&priority=20" width="1" height="1" style="display: none;">
 </body>
 
 </html>
