--- a/web/html/publisher/top.html
+++ b/web/html/publisher/top.html
@@ -10,7 +10,24 @@
 <body>
     <h1>これはPCMの配信面です</h1>
     <div id="ad"></div>
-    <script type="text/javascript" src="{{.AdDeliver}}/ad"></script>
+    <script>
+        function Callback(ad) {
+            if (ad != null && ad != "" && ad != undefined) {
+                var target = document.getElementById("ad");
+                if (ad.ads != null && ad.ads != "" && ad.ads != undefined) {
+                    target.innerHTML = ad.ads;
+                }
+            }
+        }
+
+        // ADNW URL
+        var targetBaseUrl = "http://ad-deliver.test/delivery"
+
+        // Ad request
+        var adReq = document.createElement("script");
+        adReq.src = targetBaseUrl
+        document.getElementById("ad").insertBefore(adReq, null);
+    </script>
 </body>
 
 </html>
