fix: パッケージ名を考慮し、ハンドラー関数の名前を変更

--- a/web/html/publisher/top.html
+++ b/web/html/publisher/top.html
@@ -21,7 +21,7 @@
         }
 
         // ADNW URL
-        var targetBaseUrl = "http://ad-deliver.test/delivery"
+        var targetBaseUrl = "{{.AdDeliver}}/delivery"
 
         // Ad request
         var adReq = document.createElement("script");
