fix:　返却する広告内容の間違いを修正

--- a/web/html/publisher/top.html
+++ b/web/html/publisher/top.html
@@ -21,7 +21,7 @@
         }
 
         // ADNW URL
-        var targetBaseUrl = "{{.AdDeliver}}/delivery"
+        var targetBaseUrl = "{{.}}/delivery"
 
         // Ad request
         var adReq = document.createElement("script");
