--- a/web/html/publisher/top.html
+++ b/web/html/publisher/top.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>これはPCMの配信面です</h1>
-    <div id="ad"></div>
+    <div id="ad">
+    </div>
     <script>
         function Callback(ad) {
             if (ad != null && ad != "" && ad != undefined) {
